force-app/main/default/objects/Protocol_Scale__c/Protocol_Scale__c.object-meta.xml
<CustomObject>
    <label>Protocol Scale</label>
    <nameField>
        <label>Protocol Scale Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Protocol Scales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>