force-app/main/default/objects/Protocol_Scale__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aggressive</fullName>
            </value>
            <value>
                <fullName>Arousal</fullName>
            </value>
            <value>
                <fullName>Fear</fullName>
            </value>
            <value>
                <fullName>Sociability</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Leashing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>