force-app/main/default/objects/Protocol_Scale__c/fields/Column_Number__c.field-meta.xml
<CustomField>
    <fullName>Column_Number__c</fullName>
    <formula>if(ISPICKVAL(Category__c, &apos;Aggressive&apos;), 1,
			if(ISPICKVAL(Category__c, &apos;Arousal&apos;), 2,
						if(ISPICKVAL(Category__c, &apos;Fear&apos;), 3,
									if(ISPICKVAL(Category__c, &apos;Sociability&apos;), 4,
												if(ISPICKVAL(Category__c, &apos;Leashing&apos;), 5,
											6)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Column Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>