force-app/main/default/objects/Protocol_Scale__c/fields/Column_Order__c.field-meta.xml
<CustomField>
    <fullName>Column_Order__c</fullName>
    <label>Column Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>