force-app/main/default/objects/Protocol_Scale__c/fields/Fields_to_include__c.field-meta.xml
<CustomField>
    <fullName>Fields_to_include__c</fullName>
    <inlineHelpText>api names of fields to include/show in the session when this scale is also present.  Should be &apos;;&apos; separated</inlineHelpText>
    <label>Fields to include</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>