force-app/main/default/objects/Protocol_Scale__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <inlineHelpText>semicolon separated</inlineHelpText>
    <label>Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>