force-app/main/default/objects/Protocol_Scale__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>isActive__c</columns>
    <columns>isDefault__c</columns>
    <columns>Required__c</columns>
    <columns>Category__c</columns>
    <columns>Column_Order__c</columns>
    <columns>Options__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>